--- a/main.css
+++ b/main.css
@@ -1,3 +1,17 @@
+* {
+  font-family: "Raleway", sans-serif;
+  color: black;
+}
+
+body {
+  background-image: url("rain.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position-y: center;
+  text-align: center;
+}
+
 .start-page {
   width: 100%;
   max-width: 900px;
@@ -10,30 +24,85 @@
 }
 .cloud-content {
   position: absolute;
-  bottom: 70%;
-  left: 40%;
+  bottom: 45%;
+  left: 38%;
+  width: 300px;
+  text-align: center;
+  margin: 0 auto;
 }
-.greeting,
-.time-title,
+/* .greeting, */
+.time-title {
+  padding: 0px;
+  margin-bottom: 5px;
+}
+.time-input {
+  padding: 11px;
+  width: 100px;
+  border: solid 1px rgb(145, 145, 145);
+  border-radius: 3px;
+}
 .theme-title {
-  color: black;
+  margin-bottom: 5px;
+}
+.time-theme-flex {
+  display: flex;
+  justify-content: space-between;
+}
+.input-name {
+  padding: 10px;
+}
+.ok-button {
+  padding: 10px;
+  background-color: rgb(224, 224, 224);
+  border: solid 1px rgb(145, 145, 145);
+  border-radius: 3px;
 }
 
-.page-container {
-  display: none;
+button {
+  background-color: white;
+  border-radius: 5px;
+  border: solid 1px rgb(145, 145, 145);
+  padding: 10px 45px;
+  margin-top: 20px;
 }
-
-* {
-  font-family: "Raleway", sans-serif;
+button:hover {
+  cursor: pointer;
+  background-color: rgb(197, 197, 197);
   color: white;
 }
+li {
+  color: black;
+  list-style-type: none;
+  text-align: left;
+  padding: 10px;
+  font-size: 16px;
+  font-weight: 400;
+  width: 100px;
+}
+li:hover {
+  background-color: rgb(197, 197, 197);
+  color: white;
+  cursor: pointer;
+}
+li:not(:last-child) {
+  border-bottom: solid 1px rgb(145, 145, 145);
+}
+ul {
+  border-radius: 3px;
+  border: solid 1px rgb(145, 145, 145);
+  padding: 0;
+  margin-top: 5px;
+}
+#theme {
+  padding: 10px;
+  width: 100px;
+  border: solid 1px rgb(145, 145, 145);
+  border-radius: 3px;
+  width: 124px;
+}
 
-body {
-  background-image: url("rain.jpeg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-  background-position-y: center;
+/* .page-container {
+  display: none;
 }
 
 .page-container {
@@ -53,17 +122,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-button {
-  margin-top: 30px;
-  background-color: rgba(0, 0, 0, 0);
-  border-radius: 50px;
-  border: solid 1px white;
-  padding: 10px 45px;
-}
-button:hover {
-  background-color: rgba(255, 255, 255, 0.4);
-  cursor: pointer;
-}
+
 .sound-container {
   display: flex;
   flex-direction: column;
@@ -95,4 +154,4 @@ p {
 .sound-symbol {
   width: 54px;
   margin: 30px auto;
-}
+} */
