--- a/main.css
+++ b/main.css
@@ -136,7 +136,6 @@ ul {
   display: none;
   cursor: pointer;
   opacity: 0.5;
-  margin: 10px 0;
 }
 
 /* -----------MEDIA QUERIES-------------- */
@@ -164,6 +163,9 @@ ul {
 @media screen and (max-width: 730px) {
   .cloud-content {
     top: 16vw;
+  }
+  .greeting {
+    margin-top: 15px;
   }
   h1 {
     font-size: 20px;
@@ -208,7 +210,7 @@ ul {
     width: 100%;
   }
   .cloud-content {
-    top: 15vw;
+    top: 16vw;
   }
   #theme {
     padding: 5px;
@@ -218,6 +220,16 @@ ul {
   }
   .input-name {
     padding: 5px;
+  }
+  .greeting {
+    margin-top: 10px;
+    margin-bottom: 8px;
+  }
+  .name-p {
+    margin-top: 8px;
+  }
+  #start-btn {
+    margin-top: 10px;
   }
 }
 
@@ -232,7 +244,30 @@ ul {
     width: 100%;
   }
   .cloud-content {
-    top: 11vw;
+    top: 13vw;
+  }
+  .star-button {
+    width: 25px;
+  }
+  #start-btn {
+    margin-top: 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .cloud-content {
+    top: 15vw;
+  }
+}
+@media screen and (max-width: 380px) {
+  .cloud-content {
+    top: 17vw;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .cloud-content {
+    top: 19vw;
   }
 }
 
