--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ body {
 }
 .time-input {
   padding: 11px;
-  width: 80px;
+  width: 72px;
   border: solid 1px rgb(145, 145, 145);
   border-radius: 3px;
   margin-left: 30px;
@@ -60,13 +60,28 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.time-flex {
+  display: flex;
+}
+.arrow-flex {
+  width: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 3px;
+}
+.up-arrow:hover,
+.down-arrow:hover {
+  cursor: pointer;
+  transform: scale(1.15);
+}
 .theme-flex {
   display: flex;
 }
 #theme {
   padding: 10px;
   padding-right: 0;
-  width: 104px;
+  width: 96px;
   border: solid 1px rgb(145, 145, 145);
   border-radius: 3px;
   margin-right: 4px;
@@ -141,6 +156,10 @@ ul {
   opacity: 0.5;
   margin-bottom: 0;
 }
+.feeling-lucky {
+  height: 2em;
+  overflow: hidden;
+}
 
 /* -----------MEDIA QUERIES-------------- */
 
@@ -177,7 +196,8 @@ ul {
   h2 {
     font-size: 14px;
   }
-  p {
+  .name-p,
+  .lucky-p {
     font-size: 11px;
   }
   input {
